# Minerva-Refactored

./: .gitattributes  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: eval.py  train.py
src/minerva/: __init__.py
src/minerva/data/: __init__.py  wikitext.py
src/minerva/model/: __init__.py  decoder.py  decoder_layer.py
src/minerva/modules/: __init__.py  attention.py  ffn.py  highway.py  residual.py
tests/: test_forward_pass.py
